<resources>
    <string name="app_name">Jetpack Demo App</string>
    <string name="application_logo">Application logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="restore_password">Restore Account</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="or">OR</string>
    <string name="owner">by David A. Moreno</string>
    <string name="email_field_icon">Email field icon</string>
    <string name="password_field_icon">Password field icon</string>
    <string name="creator_icon">Creator icon</string>
    <string name="exit_icon">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_email">Enter your email</string>
    <string name="account_recovery">Account Recovery</string>
    <string name="account_recovery_info">You will receive an email with a temporary password.</string>
</resources>
