<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    android:paddingBottom="@dimen/default_space_double"
    tools:context=".modules.login.view.LoginRecoveryFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/loginRecoveryFragmentCloseIB"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="@dimen/default_space"
        android:background="@drawable/ic_close_red"
        android:contentDescription="@string/exit_icon"
        app:layout_constraintBottom_toTopOf="@+id/loginRecoveryFragmentView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/StyleTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_space"
        android:text="@string/account_recovery"
        app:layout_constraintBottom_toTopOf="@+id/loginRecoveryFragmentView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/loginRecoveryFragmentView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/default_space"
        android:background="@color/colorAccent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginRecoveryFragmentCloseIB" />

    <EditText
        android:id="@+id/loginRecoveryFragmentEmailET"
        style="@style/StyleEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_marginStart="@dimen/default_space_double"
        android:layout_marginLeft="@dimen/default_space_double"
        android:layout_marginTop="@dimen/default_space_double"
        android:layout_marginEnd="@dimen/default_space_double"
        android:hint="@string/enter_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/loginRecoveryFragmentView" />

    <LinearLayout
        android:id="@+id/loginRecoveryFragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/default_space"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2"
        app:layout_constraintTop_toBottomOf="@+id/loginRecoveryFragmentEmailET">

        <Button
            android:id="@+id/loginFragmentRegisterButton"
            style="@style/StyleFunctionalButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/restore_password" />

    </LinearLayout>

    <TextView
        style="@style/StyleTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_space"
        android:text="@string/account_recovery_info"
        android:textStyle="normal"
        android:textSize="@dimen/default_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginRecoveryFragmentLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>